supply content as well

--- a/template/main.tmpl
+++ b/template/main.tmpl
@@ -39,12 +39,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Project name</a>
+          <a class="brand" href="/">PyDigger</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
+<!--
+              <li class="active"><a href="/">Home</a></li>
               <li><a href="#about">About</a></li>
               <li><a href="#contact">Contact</a></li>
+-->
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -52,10 +54,7 @@
     </div>
 
     <div class="container">
-
-      <h1>Bootstrap starter template</h1>
-      <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
-
+$content
     </div> <!-- /container -->
 
     <!-- Le javascript
