--- a/template/main.tmpl
+++ b/template/main.tmpl
@@ -7,6 +7,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <link href="/pygments.css" rel="stylesheet">
+
     <!-- Le styles -->
     <link href="/bootstrap/css/bootstrap.css" rel="stylesheet">
     <style>
