--- a/template/main.tmpl
+++ b/template/main.tmpl
@@ -44,12 +44,14 @@
           <a class="brand" href="/">PyDigger</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
+            </ul>
+            <ul class="nav pull-right">
+              <li><a href="/about.html">About</a></li>
+            </ul>             
 <!--
               <li class="active"><a href="/">Home</a></li>
-              <li><a href="#about">About</a></li>
               <li><a href="#contact">Contact</a></li>
 -->
-            </ul>
           </div><!--/.nav-collapse -->
         </div>
       </div>
