link from each file display back to the project directory

--- a/template/main.tmpl
+++ b/template/main.tmpl
@@ -44,6 +44,7 @@
           <a class="brand" href="/">PyDigger</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
+              <li><a href="/$project_dir">$project_name</a></li>
             </ul>
             <ul class="nav pull-right">
               <li><a href="/about.html">About</a></li>
